.provarCaches/00D6C0000000xA6UAI/objects/sked__Change_Event__e.object
<CustomObject>
    <fields>
        <fullName>sked__Changed_Data__c</fullName>
        <label>Changed Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sked__Data__c</fullName>
        <label>Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sked__Operation__c</fullName>
        <label>Operation</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked__Table__c</fullName>
        <label>Table</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Change Event</label>
    <pluralLabel>Change Events</pluralLabel>
</CustomObject>